@startuml
hide circle
skinparam linetype ortho

entity users {
  * id : integer
  --
  name : string
  email : string
  password : string
  role : string
  avatar_url : string
  two_factor_enabled : boolean
  is_active : boolean
}

entity api_tokens {
  * id : integer
  --
  user_id : integer
  token : string
  expires_at : datetime
}

entity two_factor_challenges {
  * id : integer
  --
  user_id : integer
  code_hash : string
  attempts : integer
  expires_at : datetime
}

entity artists {
  * id : integer
  --
  spotify_id : string
  name : string
  genre : string
  followers : integer
  image_url : string
}

entity albums {
  * id : integer
  --
  spotify_id : string
  artist_id : integer
  title : string
  cover_url : string
  release_year : integer
}

entity songs {
  * id : integer
  --
  spotify_id : string
  album_id : integer
  title : string
  duration_seconds : integer
  preview_url : string
}

entity playlists {
  * id : integer
  --
  user_id : integer
  name : string
  description : text
  cover_url : string
  is_public : boolean
}

entity favorite_songs {
  * user_id : integer
  * song_id : integer
}

entity followed_artists {
  * user_id : integer
  * artist_id : integer
}

entity playlist_tracks {
  * playlist_id : integer
  * song_id : integer
  --
  position : integer
}

entity activity_logs {
  * id : integer
  --
  user_id : integer
  action : string
  resource_type : string
  resource_id : integer
  metadata : json
}

users ||--o{ api_tokens
users ||--o{ two_factor_challenges
users ||--o{ playlists
users ||--o{ activity_logs
users ||--o{ favorite_songs
songs ||--o{ favorite_songs
users ||--o{ followed_artists
artists ||--o{ followed_artists
artists ||--o{ albums
albums ||--o{ songs
playlists ||--o{ playlist_tracks
songs ||--o{ playlist_tracks
@enduml
